Use Popcorn compiler